[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Pitch.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://default_env.tres" type="Environment" id=4]
[ext_resource path="res://Scenes/Cubedude.tscn" type="PackedScene" id=5]
[ext_resource path="res://Models/Cubedude/CubeDudeBlue.material" type="Material" id=6]
[ext_resource path="res://Scenes/Goal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Models/Goal/GoalBlue.material" type="Material" id=8]
[ext_resource path="res://Scripts/DirectionalLight.gd" type="Script" id=9]
[ext_resource path="res://Scripts/SpotLight.gd" type="Script" id=10]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Wagon.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/floor.material" type="Material" id=13]
[ext_resource path="res://Scenes/BackWall.material" type="Material" id=14]
[ext_resource path="res://Scenes/skirtingBoard.material" type="Material" id=15]
[ext_resource path="res://Scenes/Godot.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Bear.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Cube.tscn" type="PackedScene" id=18]
[ext_resource path="res://GFX/picture.material" type="Material" id=19]
[ext_resource path="res://SFX/airhorn.ogg" type="AudioStream" id=20]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 22, 10, 2 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -11, 5, 1, 11, 5, -1, 11, 5, 1, -11, 5, -1, -11, -5, 1, 11, -5, -1, 11, -5, 1, -11, -5, -1, 11, 5, 1, -11, 5, -1, 11, 5, -1, -11, 5, 1, 11, -5, 1, -11, -5, -1, 11, -5, -1, -11, -5, 1, 11, 5, 1, -11, -5, 1, -11, 5, 1, 11, -5, 1, 11, 5, -1, -11, -5, -1, -11, 5, -1, 11, -5, -1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 2, 10, 16 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -1, 5, 8, 1, 5, -8, 1, 5, 8, -1, 5, -8, -1, -5, 8, 1, -5, -8, 1, -5, 8, -1, -5, -8, 1, 5, 8, -1, 5, -8, 1, 5, -8, -1, 5, 8, 1, -5, 8, -1, -5, -8, 1, -5, -8, -1, -5, 8, 1, 5, 8, -1, -5, 8, -1, 5, 8, 1, -5, 8, 1, 5, -8, -1, -5, -8, -1, 5, -8, 1, -5, -8 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -1, 5, 8, 1, 5, -8, 1, 5, 8, -1, 5, -8, -1, -5, 8, 1, -5, -8, 1, -5, 8, -1, -5, -8, 1, 5, 8, -1, 5, -8, 1, 5, -8, -1, 5, 8, 1, -5, 8, -1, -5, -8, 1, -5, -8, -1, -5, 8, 1, 5, 8, -1, -5, 8, -1, 5, 8, 1, -5, 8, 1, 5, -8, -1, -5, -8, -1, 5, -8, 1, -5, -8 )

[sub_resource type="Animation" id=10]
resource_name = "Dim_Light"
tracks/0/type = "value"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="PlaneMesh" id=6]
size = Vector2( 100, 100 )

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 75, 50 )

[sub_resource type="CubeMesh" id=8]

[sub_resource type="PlaneMesh" id=9]

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Pitch" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.72476e-005, -0.0195065, 0.0447373 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.992397, -0.0655232, -0.104191, 0.0670397, 0.997688, 0.011117, 0.103221, -0.0180174, 0.994495, 0, 3.59336, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 6.50865, 15 )
environment = ExtResource( 4 )

[node name="Players" type="Node" parent="."]

[node name="Player1" parent="Players" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.03347, 0, 0 )
player_id = 1

[node name="Player2" parent="Players" instance=ExtResource( 5 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.0054, 0, 0 )
player_id = 2

[node name="Cube Dube" parent="Players/Player2/Armature/Skeleton" index="0"]
material/0 = ExtResource( 6 )

[node name="Goals" type="Node" parent="."]

[node name="Goal1" parent="Goals" instance=ExtResource( 7 )]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, -9.45207, 0, 0.0629287 )

[node name="Goal2" parent="Goals" instance=ExtResource( 7 )]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 9.5817, 0, 0.310806 )

[node name="Goal" parent="Goals/Goal2" index="0"]
material/0 = ExtResource( 8 )

[node name="Boundaries" type="Node" parent="."]
editor/display_folded = true

[node name="BackWall" type="MeshInstance" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -9 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Boundaries/BackWall"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/BackWall/StaticBody"]
shape = SubResource( 2 )

[node name="BackWall2" type="MeshInstance" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -7.17471 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Boundaries/BackWall2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/BackWall2/StaticBody"]
shape = SubResource( 2 )

[node name="FrontWall" type="MeshInstance" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 9 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Boundaries/FrontWall"]
editor/display_folded = true
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/FrontWall/StaticBody"]
shape = SubResource( 2 )

[node name="FrontWall2" type="MeshInstance" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 6.74753 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Boundaries/FrontWall2"]
editor/display_folded = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/FrontWall2/StaticBody"]
shape = SubResource( 2 )

[node name="LeftWall" type="MeshInstance" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 5, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Boundaries/LeftWall"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/LeftWall/StaticBody"]
shape = SubResource( 4 )

[node name="LeftWall2" type="MeshInstance" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.7595, 5, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Boundaries/LeftWall2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/LeftWall2/StaticBody"]
shape = SubResource( 4 )

[node name="RightWall" type="MeshInstance" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 5, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Boundaries/RightWall"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/RightWall/StaticBody"]
shape = SubResource( 5 )

[node name="RightWall2" type="MeshInstance" parent="Boundaries"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9675, 5, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Boundaries/RightWall2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Boundaries/RightWall2/StaticBody"]
shape = SubResource( 5 )

[node name="Lights" type="Node" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="Lights" groups=[
"lighting",
]]
transform = Transform( 0.389472, 0.546622, 0.741293, -0.811014, -0.177935, 0.557311, 0.436541, -0.818256, 0.374017, 21.4499, 10.3506, 11.2606 )
light_energy = 0.0
shadow_enabled = true
shadow_color = Color( 0, 0.027451, 0.25098, 1 )
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/DirectionalLight"]
anims/Dim_Light = SubResource( 10 )

[node name="SpotLight" type="SpotLight" parent="Lights" groups=[
"celebrant",
]]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 5.32825, 0 )
spot_range = 11.0
spot_angle = 20.0
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPositions" type="Node" parent="."]

[node name="BallSpawn" type="Position3D" parent="StartPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.54927, 0 )

[node name="Player1Spawn" type="Position3D" parent="StartPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0 )

[node name="Player2Spawn" type="Position3D" parent="StartPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0 )

[node name="GUI" parent="." instance=ExtResource( 11 )]

[node name="Decor" type="Node" parent="."]

[node name="Wagon" parent="Decor" instance=ExtResource( 12 )]
transform = Transform( 8.84112, 0, 4.67276, 0, 10, 0, -4.67276, 0, 8.84112, -13.2194, 0, -3.04672 )

[node name="Floor" type="MeshInstance" parent="Decor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0149686, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 13 )

[node name="BackWall" type="MeshInstance" parent="Decor"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, -11.8973 )
mesh = SubResource( 7 )
material/0 = ExtResource( 14 )

[node name="SkirtingBoard" type="MeshInstance" parent="Decor"]
transform = Transform( 32.8174, 0, 0, 0, 1, 0, 0, 0, 3.71074, 0, 0, -11.5394 )
mesh = SubResource( 8 )
material/0 = ExtResource( 15 )

[node name="Godot" parent="Decor" instance=ExtResource( 16 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.04014, -8.5378 )

[node name="Bear" parent="Decor" instance=ExtResource( 17 )]
transform = Transform( -1.17878, 0, 1.6157, 0, 2, 0, -1.6157, 0, -1.17878, 16.2002, -0.621394, -4.66488 )

[node name="Cube_010" parent="Decor" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.4565, 1.99111, -9.91512 )

[node name="Cube_011" parent="Decor" instance=ExtResource( 18 )]
transform = Transform( 0.711919, 0, 0.702262, 0, 1, 0, -0.702262, 0, 0.711919, -7.76721, 1.99111, -9.91512 )

[node name="Cube_012" parent="Decor" instance=ExtResource( 18 )]
transform = Transform( 0.890664, 0, -0.454662, 0, 1, 0, 0.454662, 0, 0.890664, -9.14147, 3.90869, -9.91512 )

[node name="Picture" type="MeshInstance" parent="Decor"]
transform = Transform( 3, 2.50556e-022, -1.09522e-029, 0, -1.31134e-007, -3, -2.50556e-022, 3, -1.31134e-007, 7.26072, 4.99341, -11.7704 )
mesh = SubResource( 9 )
material/0 = ExtResource( 19 )

[node name="Airhom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[connection signal="body_entered" from="Goals/Goal1/GoalDetection" to="." method="_on_GoalDetection_body_entered" binds= [ 1 ]]
[connection signal="body_entered" from="Goals/Goal2/GoalDetection" to="." method="_on_GoalDetection_body_entered" binds= [ 2 ]]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Players/Player2"]

[editable path="Goals/Goal1"]

[editable path="Goals/Goal2"]
